# RFdiffusion2

./: .clang-format  .dockerignore  .gitignore  .sourcery.yaml  .yapf_exclude  Dockerfile  README.md  README_old.md  paths.py  pyproject.toml  setup.py
.github/workflows/: documentation_workflow.yml
api/: main.py
doc/source/: conf.py  index.rst  installation.md  license_link.rst  overview.md  readme_link.rst
fused_mpnn/: README.md  all_tests.sh  custom_run.py  data_utils.py  model_utils.py  pssm_test.json  run.py  sc_run.py  sc_utils.py  score.py
fused_mpnn/make_msa/: 6tht.fa  make_msa.sh
fused_mpnn/openfold/: version.py
lib/chai/: ccd_id.txt  predict.py  run_chai.sh
notebooks/: analyze_results.ipynb
openfold/utils/: rigid_utils.py
pymol_config/: colors.py  mass_good_rainbow.py  pymolrc
rf2aa/: __init__.py
rf2aa/archived/: arguments.py  eval.py  eval_fb.py  eval_model1.py  evaluate.py  predict.py  predict_casp14.py  tests.py  train_multi_EMA.py
rf2aa/data/: data_loader.py
rf2aa/model/: RoseTTAFoldModel.py  Track_module.py
rf2aa/sym/: __init__.py  rf2_sym_manager.py
rf_diffusion/: __init__.py  aa_model.py  atomization_primitives.py  atomize.py  blosum62.py  bond_geometry.py  build_coords.py  calc_hbonds.py  chemical.py  conditioning.py  contig_shuffler.py  contigs.py  cov_dataset.term  cov_inference.term  cov_pipeline.term  cov_train.term  data_loader.py  diff_util.py  diffusion_ve.py  distributions.py  error.py  estimate_likelihood.py  features.py  guide_posts.py  idealize.py  igso3.py  import_pyrosetta.py  kinematics.py  loss.py  loss_aa.py  manual_test_mpnn.py  mask_generator.py  master_addr.py  metrics.py  model_input_logger.py  noisers.py  nucleic_compatibility_utils.py  parsers.py  partials_from_training.py  perturbations.py  (+27 more)
rf_diffusion/benchmark/: README.md  add_metrics.py  bench_07-26.json  bench_tip_debug.json  benchmark_success_rate.ipynb  benchmarks.json  benchmarks_inpaint.json  chunkify_foldseek_pdb.py  cluster_pipeline_outputs.py  compile_metrics.py  demo.json  demo_enzymes.json  demo_wip.json  dihedral_calculation.py  foldseek_clustering.py  foldseek_pdb.py  mcsa_41.json  mcsa_41_invrot_3_13_nativeidx_contig_atoms_metrics.json  molecular_glue.json  mpnn_designs.py  mpnn_designs_v2.py  open_source_demo.json  pair_blast.py  pair_tmalign.py  parse_blast.py  parse_tmalign.py  partial_example.json  pdb_to_params.py  per_design_metrics.py  per_sequence_metrics.py  pipeline.py  pipeline_test.json  ppi_rf_bench.json  ppi_rf_bench_rfdiffusion.json  pymol_align.py  run_sweep.sh  score_designs.py  sweep_hyperparam.py  (+6 more)
(+364 files in other folders)
